--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,9 @@ url = { version = "2.2", features = ["serde"], optional = true }
 chrono = { version = "0.4", features = ["serde"] } 
 
 [dev-dependencies]
-tokio = { version = "1.19", features = ["macros", "rt"] }
+tokio = { version = "1.19", features = ["macros", "rt", "rt-multi-thread"] }
 
 [features]
 http = ["dep:reqwest", "dep:url"] 
+
+full = ["http"]
